CSS 2.1 failure: border-spacing-applies-to-015.htm https://bugs.webkit.org/show_bug.cgi?id=69773

Reviewed by David Hyatt.

Source/WebCore:

The CSS test suite expects UAs to allow multiple captions per table.
Replace m_caption with a Vector called m_captions.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::RenderTable):
(WebCore::RenderTable::addChild):
(WebCore::RenderTable::removeChild):
(WebCore::RenderTable::adjustLogicalHeightForCaption):
(WebCore::RenderTable::layout):
(WebCore::RenderTable::addOverflowFromChildren):
(WebCore::RenderTable::paintObject):
(WebCore::RenderTable::subtractCaptionRect):
(WebCore::RenderTable::computePreferredLogicalWidths):
(WebCore::RenderTable::nextColElement):
(WebCore::RenderTable::colElement):
(WebCore::RenderTable::recalcCaption):
(WebCore::RenderTable::recalcSections):
(WebCore::RenderTable::overflowClipRect):
(WebCore::RenderTable::nodeAtPoint):
* rendering/RenderTable.h:

LayoutTests:

* css2.1/20110323/border-spacing-applies-to-015.htm: Added. Now passes!
* css2.1/20110323/table-caption-001.htm: Added. Passed anyway.
* css2.1/20110323/table-caption-002.htm: Added. Now passes!
* css2.1/20110323/table-caption-horizontal-alignment-001.htm: Added. Passed anyway.
* css2.1/20110323/table-caption-margins-001.htm: Added. Passed anyway.
* css2.1/20110323/table-caption-optional-001.htm: Added. Passed anyway.
* css2.1/20110323/table-caption-optional-002.htm: Added. Passed anyway.
* fast/table/dynamic-caption-add-before-child.xhtml: Extra captions now appear in result
                                                     so remove their FAIL notices.
* fast/table/multiple-captions-crash-expected.txt: Result reflects extra captions.
* fast/table/multiple-captions-crash2-expected.txt: Result reflects extra captions.
* fast/table/multiple-captions-display.xhtml: Extra captions now appear in result
                                              so remove their FAIL notices.
* platform/chromium-linux/css2.1/20110323/border-spacing-applies-to-015-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/border-spacing-applies-to-015-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-001-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-001-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-002-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-002-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-horizontal-alignment-001-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-horizontal-alignment-001-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-margins-001-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-margins-001-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-optional-001-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-optional-001-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-optional-002-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/table-caption-optional-002-expected.txt: Added.
* platform/chromium-linux/fast/table/dynamic-caption-add-before-child-expected.png:
  Result reflects extra captions.
* platform/chromium-linux/fast/table/multiple-captions-display-expected.png:
  Result reflects extra captions.
* platform/chromium-linux/tables/mozilla_expected_failures/other/test4-expected.png:
  Result reflects extra caption.
* platform/chromium-win/fast/table/dynamic-caption-add-before-child-expected.txt:
  Result reflects extra captions.
* platform/chromium-win/fast/table/multiple-captions-display-expected.txt:
  Result reflects extra captions.
* platform/chromium-win/fast/table/prepend-in-anonymous-table-expected.txt:
  Result reflects extra caption.
* platform/chromium-win/tables/mozilla_expected_failures/other/test4-expected.txt:
  Result reflects extra caption.

Canonical link: https://commits.webkit.org/88731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100177 268f45cc-cd09-0410-ab3c-d52691b4dbfc