Source/WebCore/rendering/RenderTable.cpp
@@ -49,7 +49,6 @@ using namespace HTMLNames;
 
 RenderTable::RenderTable(Node* node)
     : RenderBlock(node)
-    , m_caption(0)
     , m_head(0)
     , m_foot(0)
     , m_firstBody(0)
@@ -117,20 +116,8 @@ void RenderTable::addChild(RenderObject* child, RenderObject* beforeChild)
     bool wrapInAnonymousSection = !child->isPositioned();
 
     if (child->isRenderBlock() && child->style()->display() == TABLE_CAPTION) {
-        // First caption wins.
-        if (beforeChild && m_caption) {
-            RenderObject* o = beforeChild->previousSibling();
-            while (o && o != m_caption)
-                o = o->previousSibling();
-            if (!o) {
-                m_caption = 0;
-                setNeedsSectionRecalc();
-            }
-        }
-        if (!m_caption)
-            m_caption = toRenderBlock(child);
-        else
-            setNeedsSectionRecalc();
+        m_captions.append(toRenderBlock(child));
+        setNeedsSectionRecalc();
         wrapInAnonymousSection = false;
     } else if (child->isTableCol()) {
         m_hasColElements = true;
@@ -216,9 +203,13 @@ void RenderTable::addChild(RenderObject* child, RenderObject* beforeChild)
 void RenderTable::removeChild(RenderObject* oldChild)
 {
     RenderBox::removeChild(oldChild);
-    
-    if (m_caption && oldChild == m_caption && node())
-        node()->setNeedsStyleRecalc();
+ 
+    size_t index = m_captions.find(oldChild);
+    if (index != notFound) {
+        m_captions.remove(index);
+        if (node())
+            node()->setNeedsStyleRecalc();
+    }
     setNeedsSectionRecalc();
 }
 
@@ -274,16 +265,15 @@ void RenderTable::computeLogicalWidth()
     }
 }
 
-void RenderTable::adjustLogicalHeightForCaption()
+void RenderTable::adjustLogicalHeightForCaption(RenderBlock* caption)
 {
-    ASSERT(m_caption);
-    IntRect captionRect(m_caption->x(), m_caption->y(), m_caption->width(), m_caption->height());
+    IntRect captionRect(caption->x(), caption->y(), caption->width(), caption->height());
 
-    m_caption->setLogicalLocation(IntPoint(m_caption->marginStart(), m_caption->marginBefore() + logicalHeight()));
-    if (!selfNeedsLayout() && m_caption->checkForRepaintDuringLayout())
-        m_caption->repaintDuringLayoutIfMoved(captionRect);
+    caption->setLogicalLocation(IntPoint(caption->marginStart(), caption->marginBefore() + logicalHeight()));
+    if (!selfNeedsLayout() && caption->checkForRepaintDuringLayout())
+        caption->repaintDuringLayoutIfMoved(captionRect);
 
-    setLogicalHeight(logicalHeight() + m_caption->logicalHeight() + m_caption->marginBefore() + m_caption->marginAfter());
+    setLogicalHeight(logicalHeight() + caption->logicalHeight() + caption->marginBefore() + caption->marginAfter());
 }
 
 void RenderTable::layout()
@@ -306,9 +296,10 @@ void RenderTable::layout()
     LayoutUnit oldLogicalWidth = logicalWidth();
     computeLogicalWidth();
 
-    if (m_caption && logicalWidth() != oldLogicalWidth)
-        m_caption->setNeedsLayout(true, false);
-
+    if (logicalWidth() != oldLogicalWidth) {
+        for (unsigned i = 0; i < m_captions.size(); i++)
+            m_captions[i]->setNeedsLayout(true, false);
+    }
     // FIXME: The optimisation below doesn't work since the internal table
     // layout could have changed.  we need to add a flag to the table
     // layout that tells us if something has changed in the min max
@@ -319,7 +310,9 @@ void RenderTable::layout()
     setCellLogicalWidths();
 
     LayoutUnit totalSectionLogicalHeight = 0;
-    LayoutUnit oldTableLogicalTop = m_caption ? m_caption->logicalHeight() + m_caption->marginBefore() + m_caption->marginAfter() : 0;
+    LayoutUnit oldTableLogicalTop = 0;
+    for (unsigned i = 0; i < m_captions.size(); i++)
+        oldTableLogicalTop += m_captions[i]->logicalHeight() + m_captions[i]->marginBefore() + m_captions[i]->marginAfter();
 
     bool collapsing = collapseBorders();
 
@@ -338,8 +331,8 @@ void RenderTable::layout()
     }
 
     // Only lay out one caption, since it's the only one we're going to end up painting.
-    if (m_caption)
-        m_caption->layoutIfNeeded();
+    for (unsigned i = 0; i < m_captions.size(); i++)
+        m_captions[i]->layoutIfNeeded();
 
     // If any table section moved vertically, we will just repaint everything from that
     // section down (it is quite unlikely that any of the following sections
@@ -348,8 +341,12 @@ void RenderTable::layout()
     LayoutUnit movedSectionLogicalTop = 0;
 
     // FIXME: Collapse caption margin.
-    if (m_caption && m_caption->style()->captionSide() != CAPBOTTOM) {
-        adjustLogicalHeightForCaption();
+    if (!m_captions.isEmpty()) {
+        for (unsigned i = 0; i < m_captions.size(); i++) {
+            if (m_captions[i]->style()->captionSide() == CAPBOTTOM)
+                continue;
+            adjustLogicalHeightForCaption(m_captions[i]);
+        }
         if (logicalHeight() != oldTableLogicalTop) {
             sectionMoved = true;
             movedSectionLogicalTop = min(logicalHeight(), oldTableLogicalTop);
@@ -405,8 +402,11 @@ void RenderTable::layout()
 
     setLogicalHeight(logicalHeight() + borderAndPaddingAfter);
 
-    if (m_caption && m_caption->style()->captionSide() == CAPBOTTOM)
-        adjustLogicalHeightForCaption();
+    for (unsigned i = 0; i < m_captions.size(); i++) {
+        if (m_captions[i]->style()->captionSide() != CAPBOTTOM)
+            continue;
+        adjustLogicalHeightForCaption(m_captions[i]);
+    }
 
     if (isPositioned())
         computeLogicalHeight();
@@ -473,8 +473,8 @@ void RenderTable::addOverflowFromChildren()
     }
 
     // Add overflow from our caption.
-    if (m_caption)
-        addOverflowFromChild(m_caption);
+    for (unsigned i = 0; i < m_captions.size(); i++) 
+        addOverflowFromChild(m_captions[i]);
 
     // Add overflow from our sections.
     for (RenderObject* child = firstChild(); child; child = child->nextSibling()) {
@@ -538,7 +538,7 @@ void RenderTable::paintObject(PaintInfo& paintInfo, const LayoutPoint& paintOffs
     info.updatePaintingRootForChildren(this);
 
     for (RenderObject* child = firstChild(); child; child = child->nextSibling()) {
-        if (child->isBox() && !toRenderBox(child)->hasSelfPaintingLayer() && (child->isTableSection() || child == m_caption)) {
+        if (child->isBox() && !toRenderBox(child)->hasSelfPaintingLayer() && (child->isTableSection() || (child->isRenderBlock() && child->style()->display() == TABLE_CAPTION))) {
             LayoutPoint childPoint = flipForWritingModeForChild(toRenderBox(child), paintOffset);
             child->paint(info, childPoint);
         }
@@ -568,19 +568,18 @@ void RenderTable::paintObject(PaintInfo& paintInfo, const LayoutPoint& paintOffs
 
 void RenderTable::subtractCaptionRect(LayoutRect& rect) const
 {
-    if (!m_caption)
-        return;
-
-    LayoutUnit captionLogicalHeight = m_caption->logicalHeight() + m_caption->marginBefore() + m_caption->marginAfter();
-    bool captionIsBefore = (m_caption->style()->captionSide() != CAPBOTTOM) ^ style()->isFlippedBlocksWritingMode();
-    if (style()->isHorizontalWritingMode()) {
-        rect.setHeight(rect.height() - captionLogicalHeight);
-        if (captionIsBefore)
-            rect.move(0, captionLogicalHeight);
-    } else {
-        rect.setWidth(rect.width() - captionLogicalHeight);
-        if (captionIsBefore)
-            rect.move(captionLogicalHeight, 0);
+    for (unsigned i = 0; i < m_captions.size(); i++) {
+        LayoutUnit captionLogicalHeight = m_captions[i]->logicalHeight() + m_captions[i]->marginBefore() + m_captions[i]->marginAfter();
+        bool captionIsBefore = (m_captions[i]->style()->captionSide() != CAPBOTTOM) ^ style()->isFlippedBlocksWritingMode();
+        if (style()->isHorizontalWritingMode()) {
+            rect.setHeight(rect.height() - captionLogicalHeight);
+            if (captionIsBefore)
+                rect.move(0, captionLogicalHeight);
+        } else {
+            rect.setWidth(rect.width() - captionLogicalHeight);
+            if (captionIsBefore)
+                rect.move(captionLogicalHeight, 0);
+        }
     }
 }
 
@@ -620,8 +619,8 @@ void RenderTable::computePreferredLogicalWidths()
 
     m_tableLayout->computePreferredLogicalWidths(m_minPreferredLogicalWidth, m_maxPreferredLogicalWidth);
 
-    if (m_caption)
-        m_minPreferredLogicalWidth = max(m_minPreferredLogicalWidth, m_caption->minPreferredLogicalWidth());
+    for (unsigned i = 0; i < m_captions.size(); i++)
+        m_minPreferredLogicalWidth = max(m_minPreferredLogicalWidth, m_captions[i]->minPreferredLogicalWidth());
 
     setPreferredLogicalWidthsDirty(false);
 }
@@ -684,7 +683,7 @@ RenderTableCol* RenderTable::nextColElement(RenderTableCol* current) const
     while (next) {
         if (next->isTableCol())
             return toRenderTableCol(next);
-        if (next != m_caption)
+        if (!m_captions.contains(next))
             return 0;
         next = next->nextSibling();
     }
@@ -702,7 +701,7 @@ RenderTableCol* RenderTable::colElement(int col, bool* startEdge, bool* endEdge)
     while (child) {
         if (child->isTableCol())
             break;
-        if (child != m_caption)
+        if (!m_captions.contains(child))
             return 0;
         child = child->nextSibling();
     }
@@ -730,24 +729,8 @@ RenderTableCol* RenderTable::colElement(int col, bool* startEdge, bool* endEdge)
     return 0;
 }
 
-void RenderTable::recalcCaption(RenderBlock* caption) const
-{
-    if (!m_caption) {
-        m_caption = caption;
-        m_caption->setNeedsLayout(true);
-    } else {
-        // Make sure to null out the child's renderer.
-        if (Node* node = caption->node())
-            node->setRenderer(0);
-
-        // Destroy the child now.
-        caption->destroy();
-    }
-}
-
 void RenderTable::recalcSections() const
 {
-    m_caption = 0;
     m_head = 0;
     m_foot = 0;
     m_firstBody = 0;
@@ -758,10 +741,6 @@ void RenderTable::recalcSections() const
     for (RenderObject* child = firstChild(); child; child = nextSibling) {
         nextSibling = child->nextSibling();
         switch (child->style()->display()) {
-            case TABLE_CAPTION:
-                if (child->isRenderBlock())
-                    recalcCaption(toRenderBlock(child));
-                break;
             case TABLE_COLUMN:
             case TABLE_COLUMN_GROUP:
                 m_hasColElements = true;
@@ -1194,7 +1173,7 @@ LayoutRect RenderTable::overflowClipRect(const LayoutPoint& location, RenderRegi
     // FIXME: This code assumes (like all our other caption code) that only top/bottom are
     // supported.  When we actually support left/right and stop mapping them to top/bottom,
     // we might have to hack this code first (depending on what order we do these bug fixes in).
-    if (m_caption) {
+    if (!m_captions.isEmpty()) {
         if (style()->isHorizontalWritingMode()) {
             rect.setHeight(height());
             rect.setY(location.y());
@@ -1214,7 +1193,7 @@ bool RenderTable::nodeAtPoint(const HitTestRequest& request, HitTestResult& resu
     // Check kids first.
     if (!hasOverflowClip() || overflowClipRect(adjustedLocation, result.region()).intersects(result.rectForPoint(pointInContainer))) {
         for (RenderObject* child = lastChild(); child; child = child->previousSibling()) {
-            if (child->isBox() && !toRenderBox(child)->hasSelfPaintingLayer() && (child->isTableSection() || child == m_caption)) {
+            if (child->isBox() && !toRenderBox(child)->hasSelfPaintingLayer() && (child->isTableSection() || (child->isRenderBlock() && child->style()->display() == TABLE_CAPTION))) {
                 LayoutPoint childPoint = flipForWritingModeForChild(toRenderBox(child), adjustedLocation);
                 if (child->nodeAtPoint(request, result, pointInContainer, childPoint, action)) {
                     updateHitTestResult(result, toLayoutPoint(pointInContainer - childPoint));
